# mqtt-tracker-simulator

./: .gitignore  Azure_IoT_Hub_Monitoring_Guide.docx  CLAUDE.md  CMakeLists.txt  DPS_TESTING_GUIDE.md  PROJECT_STRUCTURE.md  README.md  TESTING_GUIDE.md  config_applied.json  simulator.toml.example  test_twin.cpp
.claude/: settings.local.json
DeviceCertGenerator/: App.xaml  App.xaml.cs  DeviceCertGenerator.csproj  MainWindow.xaml  MainWindow.xaml.cs  RADME.md  README.md  sample_imeis.csv
DeviceCertGenerator/cert/: RootCA-Local.pem  RootCA-Local.srl  rootca_local.cnf  rootca_policy.json  verification.csr
DeviceCertGenerator/device/: device_cert_log.csv
core/: Battery.cpp  Battery.hpp  DpsConnectionManager.cpp  DpsConnectionManager.hpp  DpsProvisioning.cpp  DpsProvisioning.hpp  Event.cpp  Event.hpp  Geo.cpp  Geo.hpp  IClock.cpp  IClock.hpp  IMqttClient.hpp  IRng.hpp  JsonCodec.cpp  JsonCodec.hpp  Simulator.cpp  Simulator.hpp  StateMachine.cpp  StateMachine.hpp  TwinHandler.cpp  TwinHandler.hpp
core/adapters/: DefaultPolicies.hpp  MqttTransportAdapter.cpp  MqttTransportAdapter.hpp
core/domain/: DeviceStateMachine.cpp  DeviceStateMachine.hpp  EventBus.cpp  EventBus.hpp  TelemetryPipeline.cpp  TelemetryPipeline.hpp  TrackerSimulator.hpp
core/ports/: IEventBus.hpp  IPolicyEngine.hpp  ITransport.hpp
core/sim/: MockTransport.cpp  MockTransport.hpp  SimulatedClock.cpp  SimulatedClock.hpp
crypto/: SasToken.cpp  SasToken.hpp
net/mqtt/: PahoMqttClient.cpp  PahoMqttClient.hpp
platform/desktop/: TomlConfig.hpp  main_cli.cpp
tests/: test_clean_architecture.cpp  test_sas_token.cpp
ui/qt/: MainWindow.cpp  MainWindow.hpp  main.cpp
